--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/* https://newtodesing.com/ 
+/* https://newtodesing.com/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -21,8 +21,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -33,7 +33,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -94,7 +94,7 @@ div , footer {
 }
 
 .hero {
-	margin: 50px auto; 
+	margin: 50px auto;
 	position: relative;
 }
 
@@ -114,6 +114,14 @@ h1.name {
 	border-radius: 5px;
 	display: inline-block;
 	padding: 15px 25px;
+}
+
+.occupation {
+	display: block;
+	font-size: 24px;
+	font-weight: 300;
+	color: #81899C;
+	margin-top: 10px;
 }
 
 .email {
@@ -337,8 +345,8 @@ li .description {
 }
 .description::before {
   content: '';
-  width: 0; 
-  height: 0; 
+  width: 0;
+  height: 0;
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
   border-bottom: 5px solid #f4f4f4;
